@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* add SchemaInfo.quoteName
 * remove automatic detection of convert in MediaImageMagickFilter
 	now you need a java system property to enable:
 		com.exedio.cope.media.imagemagick=true
